--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,4 +41,16 @@
       </nav>
       {%- endif -%}
     </div>
+    
+    <!--    百度站点统计       -->
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbbefffdbb2d3102e93bdfad7d00a953";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
   </header>
