--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,6 @@
 ---
 layout: none
+jsdelivr: https://cdn.jsdelivr.net/gh/ReFantasy/ReFantasy.github.io
 ---
 <!DOCTYPE html>
 {%- include snippets/get-lang.html -%}
