--- a/_includes/search.html
+++ b/_includes/search.html
@@ -18,3 +18,18 @@
 {%- elsif site.search.provider == 'custom' -%}
   {%- include search-providers/custom/search.html -%}
 {%- endif -%}
+
+
+<!-- 搜索界面加入 今日诗词  -->
+<style>
+    .box{
+        position:absolute;
+        top:50%;
+        left:50%;
+        }
+</style>
+
+<div class="box">
+<span id="jinrishici-sentence" text-align="center">正在加载今日诗词....</span>
+</div>
+<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
